feat: improve room response and reservation model
Update the room response to include the room type and reservation information.
Change the reservation model to use a set for room and utilities.
Add new logic to the room service helper to get the current reservation for a room.